...
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view alpha="0.45000000000000001" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v4U-Y0-h35" customClass="FBShimmeringView">
                                <rect key="frame" x="0.0" y="490" width="600" height="50"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Slide to continue" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5fB-fi-0pF">
                                        <rect key="frame" x="40" y="8" width="520" height="34"/>
                                        <fontDescription key="fontDescription" name="VarelaRound" family="Varela Round" pointSize="35"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
...
                                <exclude reference="SEJ-Jm-c59"/>
                            </mask>
                        </variation>
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" id="qhx-NS-OL8">
                        <barButtonItem key="leftBarButtonItem" title="Item" image="Hamburger_Menu" style="plain" id="N0O-5O-P0l">
                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            <connections>
                                <action selector="hamburgerTapped:" destination="hS2-rA-Mpu" id="dwq-9V-s0x"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T9p-ep-RAm">
                                <rect key="frame" x="560" y="88" width="32" height="32"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="32" id="3Fl-NM-0rs"/>
                                    <constraint firstAttribute="width" constant="32" id="zVM-jL-UxC"/>
                                </constraints>
                                <state key="normal" image="Plus"/>
                                <connections>
                                    <action selector="addNewCity" destination="yfj-tZ-twi" eventType="touchUpInside" id="Yyo-yA-lDT"/>
                                </connections>
                            </button>
                            <tableView clipsSubviews="YES" alpha="0.69999999999999996" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="N26-pr-H1m">
                                <rect key="frame" x="20" y="128" width="560" height="472"/>
...
