...
                                    <include reference="zzm-v7-g0Y"/>
                                </mask>
                            </variation>
                        </group>
                        <group width="1" alignment="center" id="aY2-zp-Tn9">
                            <items>
                                <label alignment="center" verticalAlignment="center" text="London" id="s9j-kK-XyK">
                                    <fontDescription key="font" name="Questrial-Regular" family="Questrial" pointSize="30"/>
                                </label>
                            </items>
                            <variation key="default">
                                <mask key="items">
                                    <exclude reference="s9j-kK-XyK"/>
...
